# feastore

./: Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
src/: lib.rs
src/database/: config.rs  error.rs  mod.rs  opt.rs
src/database/metadata/: db.rs  mod.rs  types.rs
src/database/metadata/sqlite/: db.rs  entity.rs  implements.rs  mod.rs  schema.rs
src/database/metadata/types/: entity.rs  feature.rs  feature_value_type.rs  group.rs  mod.rs  opt.rs  types.rs
src/feacli/: apply.rs  get.rs  main.rs
src/feastore/: apply.rs  entity.rs  error.rs  mod.rs  opt.rs  store.rs  types.rs
src/feastore/apply/: mod.rs  stage.rs
src/proc_macros/: Cargo.toml
src/proc_macros/src/: mod.rs
src/store/: apply.rs  mod.rs  types.rs
src/store/database/: error.rs  mod.rs
src/store/database/metadata/: mod.rs  types.rs
src/store/database/metadata/sqlite/: mod.rs  schema.rs
