[package]
name = "feastore"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "feacli"
path = "src/bin/feacli/main.rs"

[workspace]
members = ["src/proc_macros"]

[dependencies.feastore-proc_macros]
path = "src/proc_macros"
version = "0.1.0"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.10", features = ["derive"] }
csv = "1.3.0"
phf = { version = "0.11.2", features = ["macros"] }
prettytable-rs = "0.10.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_with = "3.9.0"
serde_yaml = "0.9.34"
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
thiserror = "1.0.63"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
